# cc-pass-python

./: .gitignore  README.md  cc-pass.py  debug_test.py  main.py  pyproject.toml
cof/: __init__.py  global.py  ir.py  lc.py  local.py  ssa.py  ssa_destory.py
cof/analysis/: data_flow_analyzer.py  loop.py  sccp.py  semilattice.py  ssa.py
cof/analysis/dataflow/: __init__.py  anticipated_exprs.py  available_expr.py  framework.py  live_vars.py  reaching_defs.py
cof/base/: bb.py  cfg.py  expr.py  mir.py  semilattice.py  ssa.py
cof/base/cfg/: __init__.py
cof/base/cfg/visualizer/: __init__.py  tree_layout.py  vbb.py
cof/base/mir/: args.py  eval.py  expr.py  function.py  inst.py  operand.py  operator.py  variable.py
cof/cfg/: __init__.py  bb.py  visualizer_backup.py
cof/cfg/visualizer/: __init__.py  tree_layout.py  vbb.py
cof/early/: __init__.py  const_folding.py  dce.py  lazy_code_motion.py  sccp.py
cof/ir/: lattice.py  mir.py
cof/pre/: lcm.py
ir_examples/: anticipated_exprs_example.ir  example.ir  example1.ir  example2.ir  example_01.ir  live_vars_example.ir  sccp_example.ir
ir_file_parser/: __init__.py  tokentype.py
test/: __init__.py  anticipated_exprs_example.ir  const_propagation_example.ir  example.ir  example_01.ir  reaching_defs_example.ir  sccp_example.ir  ssa_example.ir
test/parser/: __init__.py  operandtype.py  tokentype.py
utils/cfg_visualizer/: __init__.py  tree_layout.py  vbb.py
