[project]
name = "cc-pass"
version = "0.1.0"
description = ""
authors = [
    {name = "ChengCheng",email = "2010705797@qq.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.9.1,<7.0.0)",
    "pyright (>=1.1.402,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "click (>=8.3.0,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

#[[tool.poetry.source]]
#name = "mirrors"
#url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
#priority = "primary"

